--- a/travel/index.html
+++ b/travel/index.html
@@ -19,7 +19,7 @@
           </a>
           <p class="header__logo-name">Travel Portal</p>
         </div>
-        <div class="header__nav">
+        <nav class="header__nav">
           <ul class="header__list">
             <li class="header__item">
               <a href="#preview" class="header__link">How It Works</a>
@@ -34,7 +34,7 @@
               <a href="#stories" class="header__link">Travel Stories</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <form class="header__login-form">
           <button type="submit" class="header__login-form_button">Login</button>
         </form>
