feat: start advanced player

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,6 +16,23 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
+
+      <div class="vol-controls"><button class="vol-mute player-icon"></button>
+        <div class="vol-line-block">
+          <div class="vol-line"></div>
+        </div>
+      </div>
+
+      <div class="play-title"><br></div>
+      <div class="time-line">
+        <div class="all-time-line"></div>
+      </div>
+      <div class="play-time">
+        <div class="play-cur-time">00:00</div>
+        <div class="play-dur-time">00:00</div>
+      </div>
+
+
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
