feat: add volume control

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -17,10 +17,12 @@
         <button class="play-next player-icon"></button>
       </div>
 
-      <div class="vol-controls"><button class="vol-mute player-icon"></button>
-        <div class="vol-line-block">
+      <div class="vol-controls">
+        <button class="vol-mute player-icon"></button>
+        <input class="volume progress" type="range" min="0" max="100" value="30" >
+        <!-- <div class="vol-line-block">
           <div class="vol-line"></div>
-        </div>
+        </div> -->
       </div>
 
       <div class="play-title"><br></div>
