--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,19 +16,12 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
-
       <div class="vol-controls">
         <button class="vol-mute player-icon"></button>
-        <input class="volume progress" type="range" min="0" max="100" value="30" >
-        <!-- <div class="vol-line-block">
-          <div class="vol-line"></div>
-        </div> -->
+        <input class="volume progress" type="range" min="0" max="100" value="10" >
       </div>
-
       <div class="play-title"><br></div>
-      <div class="time-line">
-        <div class="all-time-line"></div>
-      </div>
+      <input class="progress progress-bar" type="range" min="0" max="100" value="0">
       <div class="play-time">
         <div class="play-cur-time">00:00</div>
         <div class="play-dur-time">00:00</div>
