fix: change layout for audio items to fix bugs

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -18,13 +18,13 @@
       </div>
       <div class="vol-controls">
         <button class="vol-mute player-icon"></button>
-        <input class="volume progress" type="range" min="0" max="100" value="10" >
+        <input class="vol-line progress-style" type="range" min="0" max="100" value="10" >
       </div>
       <div class="play-title"><br></div>
-      <input class="progress progress-bar" type="range" min="0" max="100" value="0">
+      <input class="progress-bar progress-style" type="range" min="0" max="100" value="0">
       <div class="play-time">
-        <div class="play-cur-time">00:00</div>
-        <div class="play-dur-time">00:00</div>
+        <div class="play-current-time">00:00</div>
+        <div class="play-duration-time">00:00</div>
       </div>
 
 
