feat: add header background

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -35,9 +35,10 @@
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
-        <span class="temperature"></span>
+        <!-- <span class="temperature"></span> -->
         <span class="weather-description"></span>
       </div>
+      <div class="temperature"></div>
       <div class="wind"></div>
       <div class="humidity"></div>
     </div>
