--- a/momentum/index.html
+++ b/momentum/index.html
@@ -31,11 +31,10 @@
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" class="city" placeholder="Minsk"/>
+      <input type="text" class="city" />
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
-        <!-- <span class="temperature"></span> -->
         <span class="weather-description"></span>
       </div>
       <div class="temperature"></div>
@@ -52,16 +51,62 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" placeholder="[Enter name]" />
+      <input type="text" class="name" />
     </div>
   </main>
   <footer class="footer">
-    <button class="change-quote"></button>
-    <div>
-      <div class="quote"></div>
-      <div class="author"></div>
+    <div class="settings-wrapper">
+      <button class="language"></button>
+    </div>
+    <div class="quote-wrapper">
+      <button class="change-quote"></button>
+      <div>
+        <div class="quote"></div>
+        <div class="author"></div>
+      </div>
+    </div>
+    <div class="social-wrapper">
+      <a class="social-item rs-logo" href="https://rs.school/js-stage0/" target="_blank">
+        <img src="./assets/svg/rs_school.svg" class="rs-logo" alt="RS School" width="80" height="30">
+      </a>
+      <a class="social-item" href="https://github.com/Olmeor" target="_blank">
+        <img src="./assets/svg/github.svg" alt="GitHub" width="40" height="40">
+      </a>
     </div>
   </footer>
   <script type="module" src="js/script.js"></script>
 </body>
 </html>
+
+<!-- ${translation[currentLang].defaultCity} -->
+
+<!-- 
+const translation = {
+  en: {
+    placeholder: "[Enter name]",
+    night: "Good night",
+    morning: "Good morning",
+    afternoon: "Good afternoon",
+    evening: "Good evening",
+    temperature: "Temperature",
+    windSpeed: "Wind speed",
+    windSpeedUnit: "m/s",
+    humidity: "Humidity",
+    dataLanguage: "en-EN",
+    defaultCity: "Minsk",
+  },
+  ru: {
+    placeholder: "[Введите имя]",
+    night: "Доброй ночи,",
+    morning: "Доброе утро,",
+    afternoon: "Добрый день,",
+    evening: "Добрый вечер,",
+    temperature: "Температура",
+    windSpeed: "Скорость верта",
+    windSpeedUnit: "м/с",
+    humidity: "Влажность",
+    dataLanguage: "ru-RU",
+    defaultCity: "Минск",
+  },
+};
+ -->
