feat: add setting button

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -56,6 +56,7 @@
   </main>
   <footer class="footer">
     <div class="settings-wrapper">
+      <button class="settings"></button>
       <button class="language"></button>
     </div>
     <div class="quote-wrapper">
