refactor: change weather block

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -37,9 +37,9 @@
       <div class="description-container">
         <span class="weather-description"></span>
       </div>
-      <div class="temperature"></div>
-      <div class="wind"></div>
-      <div class="humidity"></div>
+      <div class="weather-temperature temperature"></div>
+      <div class="weather-wind wind"></div>
+      <div class="weather-humidity humidity"></div>
     </div>
   </header>
   <main class="main">
