feat: start settings menu

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -53,6 +53,71 @@
       <span class="greeting"></span>
       <input type="text" class="name" />
     </div>
+    <div class="settings-container">
+      <!-- ----------------------------------------------- -->
+      <div class="settings-content">
+        <div class="settings-block">
+          <b class="setting-time">Часы</b>
+          <i>
+            <input type="checkbox" id="switch-time" checked="">
+            <label for="switch-time" class="toggler toggle-time"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-date">Дата</b>
+          <i>
+            <input type="checkbox" id="switch-date" checked="">
+            <label for="switch-date" class="toggler toggle-date"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-greeting">Приветствие</b>
+          <i>
+            <input type="checkbox" id="switch-greeting" checked="">
+            <label for="switch-greeting" class="toggler toggle-greeting"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-quote">Цитаты</b>
+          <i>
+            <input type="checkbox" id="switch-quote" checked="">
+            <label for="switch-quote" class="toggler toggle-quote"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-weather">Погода</b>
+          <i>
+            <input type="checkbox" id="switch-weather" checked="">
+            <label for="switch-weather" class="toggler toggle-weather"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-audio">Аудио плеер</b>
+          <i>
+            <input type="checkbox" id="switch-audio" checked="">
+            <label for="switch-audio" class="toggler toggle-audio"></label>
+          </i>
+        </div>
+        <div class="settings-block">
+          <b class="setting-bg">Бэкграунд</b>
+          <div class="setting-bg-container">
+            <select class="setting-bg-select">
+              <option value="0">Github</option>
+              <option value="1">Unsplash API</option>
+              <option value="2">Flickr API</option>
+            </select>
+            <!-- <input type="text" placeholder="tag" class="setting-bg-tag"> -->
+          </div>
+        </div>
+        <div class="settings-block">
+          <b class="setting-lang">Язык</b>
+          <i>
+            <input type="checkbox" id="switch-lang">
+            <label for="switch-lang" class="toggler toggle-lang"></label>
+          </i>
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <div class="settings-wrapper">
