feat: transfer translation button to settings menu, change uniformity

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -57,51 +57,51 @@
       <form name="form" class="settings-form" action="#">
         <div class="settings-content">
           <div class="settings-block">
-            <p class="setting-lang">Язык</p>
+            <p class="setting-lang">Изменить язык</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-lang">
+              <input type="checkbox" class="checkbox" id="switch-lang" name="languageButton">
               <label for="switch-lang" class="toggler toggle-lang"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-time">Время</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-time" name="timeBlock">
+              <input type="checkbox" class="checkbox" id="switch-time" name="timeBlock">
               <label for="switch-time" class="toggler toggle-time"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-date">Дата</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-date" name="dateBlock">
+              <input type="checkbox" class="checkbox" id="switch-date" name="dateBlock">
               <label for="switch-date" class="toggler toggle-date"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-greeting">Приветствие</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-greeting" name="greetingBlock">
+              <input type="checkbox" class="checkbox" id="switch-greeting" name="greetingBlock">
               <label for="switch-greeting" class="toggler toggle-greeting"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-quotes">Цитаты</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-quote" name="quotesBlock">
+              <input type="checkbox" class="checkbox" id="switch-quote" name="quotesBlock">
               <label for="switch-quote" class="toggler toggle-quote"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-audio">Аудио плеер</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-audio" name="playerBlock">
+              <input type="checkbox" class="checkbox" id="switch-audio" name="playerBlock">
               <label for="switch-audio" class="toggler toggle-audio"></label>
             </span>
           </div>
           <div class="settings-block">
             <p class="setting-weather">Погода</p>
             <span class="input-checkbox">
-              <input checked type="checkbox" class="checkbox" id="switch-weather" name="weatherBlock">
+              <input type="checkbox" class="checkbox" id="switch-weather" name="weatherBlock">
               <label for="switch-weather" class="toggler toggle-weather"></label>
             </span>
           </div>
@@ -123,7 +123,7 @@
   <footer class="footer">
     <div class="settings-wrapper">
       <button class="settings"></button>
-      <button class="language"></button>
+      <!-- <button class="language"></button> -->
     </div>
     <div class="quote-wrapper">
       <button class="change-quote"></button>
