fix: fix any bugs

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -105,6 +105,7 @@
               <label for="switch-weather"></label>
             </span>
           </div>
+          
           <div class="settings-block">
             <p class="setting-bg">Бэкграунд</p>
             <div class="setting-bg-container">
@@ -116,12 +117,11 @@
               </select>
             </div>
           </div>
-          <div class="settings-block">
-            <input type="text" placeholder="Введите тему" class="switch-background-theme" id="switch-bg-theme" name="backgroundThemeBlock">
+          <div class="settings-block bgThemeBlock disable-block">
+            <input type="text" placeholder="Введите тему" class="switch-background-theme" id="switch-bg-theme" name="backgroundTheme">
             <button class="set-theme-button"></button>
           </div>
-          <!-- <textarea tabindex="1" id="switch-bg-theme" type="text" name="bgThemeBlock" class="setting-bg-theme" placeholder="Введите тему фона" autocomplete="off"></textarea> -->
-        </div>
+          </div>
       </form>
     </div>
   </main>
