fix: fix bug local storage after change form to div

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -54,7 +54,7 @@
       <input type="text" class="name" />
     </div>
     <div class="settings-wrapper">
-      <form name="form" class="settings-form" action="#">
+      <div name="form" class="settings-form">
         <div class="settings-content">
           <div class="settings-block">
             <p class="setting-lang">Изменить язык</p>
@@ -122,7 +122,7 @@
             <button class="set-theme-button"></button>
           </div>
           </div>
-      </form>
+      </div>
     </div>
   </main>
   <footer class="footer">
