feat: end of work with background API and local storage

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -109,11 +109,10 @@
           <div class="settings-block">
             <p class="setting-bg">Бэкграунд</p>
             <div class="setting-bg-container">
-              <!-- <label for="switch-background"></label> -->
               <select class="switch-background" id="switch-background" name="backgroundBlock">
-                <option value="1" selected>Github</option>
-                <option value="2">Unsplash API</option>
-                <option value="3">Flickr API</option>
+                <option value="0">Github</option>
+                <option value="1">Unsplash API</option>
+                <option value="2">Flickr API</option>
               </select>
             </div>
           </div>
