fix: fix adaptive

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -124,6 +124,7 @@
           </div>
       </div>
     </div>
+    <!-- <div class="todo hidden-block"> -->
     <div class="todo hidden-block">
       <div class="todo__input">
         <input class="todo__text" type="text">
@@ -139,7 +140,8 @@
   </main>
   <footer class="footer">
     <div class="settings-wrapper">
-      <button class="settings"></button>
+      <button class="settings-button"></button>
+      <button class="todo-button"></button>
     </div>
     <div class="quote-wrapper">
       <button class="change-quote"></button>
