--- a/momentum/index.html
+++ b/momentum/index.html
@@ -142,6 +142,7 @@
       </a>
     </div>
   </footer>
+  <script type="module" src="js/index.js"></script>
   <script type="module" src="js/script.js"></script>
 </body>
 </html>
