--- a/momentum/index.html
+++ b/momentum/index.html
@@ -134,15 +134,11 @@
       </div>
     </div>
     <div class="social-wrapper">
-      <a class="social-item rs-logo" href="https://rs.school/js-stage0/" target="_blank">
-        <img src="./assets/svg/rs_school.svg" class="rs-logo" alt="RS School" width="80" height="30">
-      </a>
-      <a class="social-item" href="https://github.com/Olmeor" target="_blank">
-        <img src="./assets/svg/github.svg" alt="GitHub" width="40" height="40">
-      </a>
+      <a class="social-item rs-logo" href="https://rs.school/js-stage0/" target="_blank"></a>
+      <a class="social-item github-logo" href="https://github.com/Olmeor" target="_blank"></a>
     </div>
   </footer>
-  <script src="./js/index.js"></script>
-  <script type="module" src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
