feat: start todo

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -121,10 +121,17 @@
           </div>
       </div>
     </div>
+    <div class="todo">
+      <div class="todo-content">
+
+      </div>
+    </div>
+
   </main>
   <footer class="footer">
     <div class="settings-wrapper">
       <button class="settings-button"></button>
+      <button class="todo-button todo-btn"></button>
     </div>
     <div class="quote-wrapper">
       <button class="change-quote"></button>
@@ -138,7 +145,7 @@
       <a class="social-item github-logo" href="https://github.com/Olmeor" target="_blank"></a>
     </div>
   </footer>
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
   <script type="module" src="./js/index.js"></script>
 </body>
 </html>
