--- a/momentum/index.html
+++ b/momentum/index.html
@@ -121,9 +121,17 @@
           </div>
       </div>
     </div>
-    <div class="todo">
+    <div class="todo-wrapper">
       <div class="todo-content">
-
+        <div class="todo-header-wrapper">
+          <p class="todo-header">ToDo List</p>
+          <button class="todo-close-button"></button>
+        </div>
+        <div class="todo-list"></div>
+        <div class="todo-input-wrapper">
+          <input type="text" class="todo-input" placeholder="New todo">
+          <button class="todo-input-button"></button>
+        </div>
       </div>
     </div>
 
