feat: add translate and localstorage for todo

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -121,7 +121,7 @@
           </div>
       </div>
     </div>
-    <div class="todo-wrapper">
+    <div class="todo-wrapper todo-close">
       <div class="todo-content">
         <div class="todo-header-wrapper">
           <p class="todo-header">ToDo List</p>
